--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "serverless": "^2.72.1",
     "serverless-deployment-bucket": "^1.5.1",
     "serverless-domain-manager": "^6.0.3",
-    "serverless-layers": "^2.5.1",
-    "serverless-offline": "^8.3.1"
+    "serverless-layers": "^2.5.1"
   },
   "scripts": {
     "deploy:dev": "sls deploy -s dev --region us-east-1",
