--- a/serverless.yml
+++ b/serverless.yml
@@ -45,7 +45,7 @@ custom:
       # That's why we provide an empty default value '', but this
       # in effect prevent sls from catching errors (missing variable in ssm)!
       S3_STATIC_ARN: ${ssm:/mentorpal/v2/s3_static_arn, ''}
-      GRAPHQL_ENDPOINT: 'https://${ssm:/mentorpal/dev/lambda_base_url, ""}/graphql'
+      GRAPHQL_ENDPOINT: https://api-dev.mentorpal.org/graphql/graphql
       API_SECRET: ${ssm:/mentorpal/v2/shared/api_secret, ''}
       JWT_SECRET: ${ssm:/mentorpal/v2/shared/jwt_secret, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/v2/shared/static_url_base, ''}
@@ -53,9 +53,9 @@ custom:
       WEBACL_ARN: '${ssm:/mentorpal/mentor-upload-processor/qa/firewall/WEBACL_ARN}'
     qa:
       S3_STATIC_ARN: ${ssm:/mentorpal/v2/s3_static_arn, ''}
-      LOG_LEVEL: 'debug'
+      LOG_LEVEL: debug
       IS_SENTRY_ENABLED: true
-      GRAPHQL_ENDPOINT: 'https://${ssm:/mentorpal/v2/lambda_base_url, ""}/graphql'
+      GRAPHQL_ENDPOINT: https://api-qa.mentorpal.org/graphql/graphql
       API_SECRET: ${ssm:/mentorpal/v2/shared/api_secret, ''}
       JWT_SECRET: ${ssm:/mentorpal/v2/shared/jwt_secret, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/v2/shared/static_url_base, ''}
@@ -64,7 +64,7 @@ custom:
     prod:
       LOG_LEVEL: 'info'
       IS_SENTRY_ENABLED: true
-      GRAPHQL_ENDPOINT: 'https://${ssm:/mentorpal/cf/lambda_base_url, ""}/graphql'
+      GRAPHQL_ENDPOINT: https://api.mentorpal.org/graphql/graphql
       S3_STATIC_ARN: ${ssm:/mentorpal/cf/s3_static_arn, ''}
       API_SECRET: ${ssm:/mentorpal/cf/shared/api_secret, ''}
       JWT_SECRET: ${ssm:/mentorpal/cf/shared/jwt_secret, ''}
@@ -684,5 +684,3 @@ resources:
       Description: SNS topic ARN
       Value: 
         Ref: ProcessUploadSnsTopic
-
-
