enable firewall on prod

--- a/serverless.yml
+++ b/serverless.yml
@@ -50,7 +50,7 @@ custom:
       JWT_SECRET: ${ssm:/mentorpal/newdev/shared/jwt_secret, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/newdev/shared/static_url_base, ''}
       ALERT_SNS_ARN: 'no alerts in dev'
-      WEBACL_ARN: '${ssm:/mentorpal/newdev/api_firewall_arn}'
+      WEBACL_ARN: ${ssm:/mentorpal/newdev/api_firewall_arn, ''}
     qa:
       S3_STATIC_ARN: ${ssm:/mentorpal/v2/s3_static_arn, ''}
       LOG_LEVEL: debug
@@ -60,7 +60,7 @@ custom:
       JWT_SECRET: ${ssm:/mentorpal/v2/shared/jwt_secret, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/v2/shared/static_url_base, ''}
       ALERT_SNS_ARN: ${ssm:/mentorpal/v2/shared/sns_alert_topic_arn, ''}
-      WEBACL_ARN: '${ssm:/mentorpal/v2/api_firewall_arn}'
+      WEBACL_ARN: ${ssm:/mentorpal/v2/api_firewall_arn, ''}
     prod:
       LOG_LEVEL: 'info'
       IS_SENTRY_ENABLED: true
@@ -70,8 +70,7 @@ custom:
       JWT_SECRET: ${ssm:/mentorpal/cf/shared/jwt_secret, ''}
       ALERT_SNS_ARN: ${ssm:/mentorpal/cf/shared/sns_alert_topic_arn, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/cf/shared/static_url_base, ''}
-      # TODO 
-      # WEBACL_ARN: '${ssm:/mentorpal/mentor-upload-processor/prod/firewall/WEBACL_ARN}'
+      WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn, ''}
 
   # serverless-layers requires a deployment bucket to be created before deploying this stack
   serverless-layers:
