firewall on prod

--- a/serverless.yml
+++ b/serverless.yml
@@ -70,7 +70,8 @@ custom:
       JWT_SECRET: ${ssm:/mentorpal/cf/shared/jwt_secret, ''}
       ALERT_SNS_ARN: ${ssm:/mentorpal/cf/shared/sns_alert_topic_arn, ''}
       STATIC_URL_BASE: ${ssm:/mentorpal/cf/shared/static_url_base, ''}
-      WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn, ''}
+      # WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn, ''}
+      WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn}
 
   # serverless-layers requires a deployment bucket to be created before deploying this stack
   serverless-layers:
@@ -667,8 +668,11 @@ resources:
               AllowedHeaders:
                 - '*'
 
+    # this fails on first deploy because CloudFormation tries to create
+    # association but the gateway does not yet exist
     FirewallAssociation:
       Type: AWS::WAFv2::WebACLAssociation
+      DependsOn: "ApiGatewayRestApi"
       Properties:
         ResourceArn:
           Fn::Sub: 'arn:aws:apigateway:${AWS::Region}::/restapis/${ApiGatewayRestApi}/stages/${self:provider.stage}'
