--- a/serverless.yml
+++ b/serverless.yml
@@ -72,6 +72,7 @@ custom:
       STATIC_URL_BASE: ${ssm:/mentorpal/cf/shared/static_url_base, ''}
       # WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn, ''}
       WEBACL_ARN: ${ssm:/mentorpal/cf/api_firewall_arn}
+      REGION: 'us-west-2'
 
   # serverless-layers requires a deployment bucket to be created before deploying this stack
   serverless-layers:
