fix deploy - python 3.9 was used

--- a/cicd/deployspec_staging.yml
+++ b/cicd/deployspec_staging.yml
@@ -13,6 +13,9 @@ phases:
   pre_build:
     commands:
       - n 16 # workaround https://github.com/aws/aws-codebuild-docker-images/issues/490
+      - pyenv global $PYTHON_38_VERSION
+      - python3 -m venv /root/venv
+
   # TODO
     #   - export SENTRY_RELEASE=${SENTRY_PROJECT}-$(cat .VERSION)
   build:
