--- a/serverless.yml
+++ b/serverless.yml
@@ -172,6 +172,11 @@ provider:
             - sns:Publish
           Resource:
             Ref: ProcessUploadSnsTopic
+        - Effect: "Allow"
+          Action:
+            - sqs:SendMessage
+          Resource:
+            Fn::GetAtt: [TrimQueue, Arn]
 
 package:
 #  individually: false
@@ -311,11 +316,13 @@ functions:
 
   http_answer_upload:
     handler: answer-upload.handler
-    memorySize: 4096
+    memorySize: 1024
     timeout: 30 # 30sec is max for http requests
     environment:
       UPLOAD_SNS_ARN:
         Ref: ProcessUploadSnsTopic
+      TRIM_SQS_URL:
+        Ref: TrimQueue
     events:
       - http:
           path: /upload/answer
@@ -330,7 +337,24 @@ functions:
       # binaries gets named "Binaries"+"LambdaLayer":
       # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
       - { Ref: BinariesLambdaLayer }
-  
+
+  answer-trim:
+    handler: answer-trim.handler
+    memorySize: 2048 # needs cpu to run ffmpeg
+    timeout: 300
+    environment:
+      UPLOAD_SNS_ARN:
+        Ref: ProcessUploadSnsTopic
+    events:
+      - sqs:
+          arn:
+            Fn::GetAtt: [TrimQueue, Arn]
+          batchSize: 1
+    layers:
+      # binaries gets named "Binaries"+"LambdaLayer":
+      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
+      - { Ref: BinariesLambdaLayer }
+
   answer-transcode-web:
     handler: answer-transcode-web.handler
     memorySize: 8192 # 5min video takes 100sec with 2GB, 50sec with 4GB, 30sec with 8GB
@@ -423,38 +447,56 @@ resources:
         QueueName: upload-transcribe-dlq-${self:provider.stage}
         MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
 
+    TrimDLQ:
+      Type: AWS::SQS::Queue
+      Properties:
+        DelaySeconds: 30
+        QueueName: upload-trim-dlq-${self:provider.stage}
+        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
+
+    TrimQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
+        QueueName: upload-trim-queue-${self:provider.stage}
+        VisibilityTimeout: 600 # AWS recommends 6 times lambdas timeout
+        RedrivePolicy:
+          deadLetterTargetArn:
+            Fn::GetAtt: [TrimDLQ, Arn]
+          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
+
     TranscodeWebQueue:
       Type: AWS::SQS::Queue
       Properties:
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
         QueueName: upload-trancode-web-queue-${self:provider.stage}
-        VisibilityTimeout: 360 # AWS recommends 6 times lambdas timeou
+        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
         RedrivePolicy:
           deadLetterTargetArn:
             Fn::GetAtt: [TranscodeWebDLQ, Arn]
-          maxReceiveCount: 5 # AWS recommends minimum 5
+          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
     
     TranscodeMobileQueue:
       Type: AWS::SQS::Queue
       Properties:
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
         QueueName: upload-trancode-mobile-queue-${self:provider.stage}
-        VisibilityTimeout: 360 # AWS recommends 6 times lambdas timeou
+        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
         RedrivePolicy:
           deadLetterTargetArn:
             Fn::GetAtt: [TranscodeMobileDLQ, Arn]
-          maxReceiveCount: 5 # AWS recommends minimum 5
+          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
     
     TranscribeQueue:
       Type: AWS::SQS::Queue
       Properties:
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
         QueueName: upload-transcribe-queue-${self:provider.stage}
-        VisibilityTimeout: 600 # AWS recommends 6 times lambdas timeou
+        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeou
         RedrivePolicy:
           deadLetterTargetArn:
             Fn::GetAtt: [TranscribeDLQ, Arn]
-          maxReceiveCount: 5 # AWS recommends minimum 5
+          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
 
     ProcessUploadSnsTopic:
       Type: AWS::SNS::Topic
@@ -582,6 +624,29 @@ resources:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
         OKActions:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+    TrimDLQAlarm:
+      Type: AWS::CloudWatch::Alarm
+      Condition: CreateCloudWatchAlarm
+      Properties:
+        ActionsEnabled: true
+        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}'
+        AlarmDescription: 'Number of failed trim jobs greater than zero'
+        Namespace: 'AWS/SQS'
+        Statistic: 'Sum'
+        MetricName: 'ApproximateNumberOfMessagesVisible'
+        ComparisonOperator: 'GreaterThanThreshold'
+        EvaluationPeriods: 1
+        Period: 300 # 5 minutes in seconds
+        Threshold: 0
+        TreatMissingData: 'notBreaching'
+        Dimensions:
+          - Name: QueueName
+            Value: ${self:resources.Resources.TrimDLQ.Properties.QueueName}
+        AlarmActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+        OKActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+
     Response5xx:
       Type: 'AWS::ApiGateway::GatewayResponse'
       Properties:
