--- a/cicd/buildspec.yml
+++ b/cicd/buildspec.yml
@@ -8,8 +8,10 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 16
+      nodejs: 14
     commands:
+      # workaround https://github.com/aws/aws-codebuild-docker-images/issues/490:
+      - n 16
       - NODE_ENV=dev npm ci
       - pyenv global $PYTHON_38_VERSION
       - python3 -m venv /root/venv
