--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "deploy:dev": "sls deploy -s dev --region us-east-1",
     "deploy:qa": "sls deploy -s qa --region us-east-1",
-    "deploy:prod": "sls deploy -s prod --region us-west-2"
+    "deploy:prod": "sls deploy -s prod --region us-west-2",
+    "license:fix": "license-check-and-add remove -f license-config.json && license-check-and-add add -f license-config.json",
+    "license:deploy": "license-check-and-add remove -f license-config.json && license-check-and-add add -f $LICENSE_CONFIG"
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,8 @@
     "mentorpal"
   ],
   "author": "USC ICT",
-  "license": "SEE LICENSE IN ../LICENSE"
+  "license": "SEE LICENSE IN ../LICENSE",
+  "dependencies": {
+    "license-check-and-add": "^4.0.5"
+  }
 }
