--- a/serverless.yml
+++ b/serverless.yml
@@ -426,117 +426,16 @@ resources:
         - Fn::Equals: ['${self:provider.stage}', 'qa']
         - Fn::Equals: ['${self:provider.stage}', 'prod']
   Resources:
-    TranscodeWebDLQ:
+    EvaluatePipelineTriggersStateMachine: ${file(./resources/StepFunctions/AnswerUploadStepFunction.yml):StateMachine}
+    EvaluatePipelineTriggersStateMachineExecutionRole: ${file(./resources/IAM/AnswerUploadStepFunctionExecutionRole.yml):Role}
+
+
+    AnswerUploadDLQ:
       Type: AWS::SQS::Queue
       Properties:
         DelaySeconds: 30
-        QueueName: upload-transcode-web-dlq-${self:provider.stage}
+        QueueName: answer-upload-dlq-${self:provider.stage}
         MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-    
-    TranscodeMobileDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-transcode-mobile-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TranscribeDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-transcribe-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TrimDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-trim-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TrimQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trim-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TrimDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-
-    TranscodeWebQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trancode-web-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscodeWebDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-    
-    TranscodeMobileQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trancode-mobile-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscodeMobileDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-    
-    TranscribeQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-transcribe-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeou
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscribeDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-
-    ProcessUploadSnsTopic:
-      Type: AWS::SNS::Topic
-      Properties:
-        TopicName: 'mentor-upload-process-topic-${self:provider.stage}'
-        Subscription:
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscodeWebQueue, Arn]
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscodeMobileQueue, Arn]
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscribeQueue, Arn]
-
-    SnsToSqsPolicy:
-      Type: AWS::SQS::QueuePolicy
-      Properties:
-        PolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Sid: "Allow SNS publish to SQS"
-              Effect: Allow
-              Principal: 
-                Service: "sns.amazonaws.com"
-              Resource:
-                - Fn::GetAtt: [TranscodeWebQueue, Arn]
-                - Fn::GetAtt: [TranscodeMobileQueue, Arn]
-                - Fn::GetAtt: [TranscribeQueue, Arn]
-              Action: SQS:SendMessage
-              Condition:
-                ArnEquals:
-                  aws:SourceArn: 
-                    # return value is ARN, so no need for Fn::GetAtt
-                    Ref: ProcessUploadSnsTopic
-        Queues:
-          - Ref: TranscodeWebQueue
-          - Ref: TranscodeMobileQueue
-          - Ref: TranscribeQueue
 
     TranscribeInputBucket:
       Type: AWS::S3::Bucket
@@ -558,13 +457,13 @@ resources:
             Status: Enabled
             ExpirationInDays: 7
 
-    TranscodeWebDLQAlarm:
+    AnswerUploadDLQAlarm:
       Type: AWS::CloudWatch::Alarm
       Condition: CreateCloudWatchAlarm
       Properties:
         ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcode-web jobs greater than zero'
+        AlarmName: 'Answer upload failed jobs ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}'
+        AlarmDescription: 'Number of failed answer upload jobs greater than zero'
         Namespace: 'AWS/SQS'
         Statistic: 'Sum'
         MetricName: 'ApproximateNumberOfMessagesVisible'
@@ -575,73 +474,7 @@ resources:
         TreatMissingData: 'notBreaching'
         Dimensions:
           - Name: QueueName
-            Value: ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TranscodeMobileDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcode-mobile jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TranscribeDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcribe-answer jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TrimDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed trim jobs ${self:resources.Resources.TrimDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed trim jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TrimDLQ.Properties.QueueName}
+            Value: ${self:resources.Resources.AnswerUploadDLQ.Properties.QueueName}
         AlarmActions:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
         OKActions:
@@ -713,13 +546,3 @@ resources:
         ResourceArn:
           Fn::Sub: 'arn:aws:apigateway:${AWS::Region}::/restapis/${ApiGatewayRestApi}/stages/${self:provider.stage}'
         WebACLArn: '${self:custom.stages.${self:provider.stage}.WEBACL_ARN}'
-
-  Outputs:
-    ProcessUploadSnsTopicName:
-      Description: SNS topic name
-      Value: 
-        Fn::GetAtt: [ProcessUploadSnsTopic, TopicName]
-    ProcessUploadSnsTopicArn:
-      Description: SNS topic ARN
-      Value: 
-        Ref: ProcessUploadSnsTopic
