--- a/resources/StepFunctions/AnswerUploadStepFunctionExecutionRole.yml
+++ b/resources/StepFunctions/AnswerUploadStepFunctionExecutionRole.yml
@@ -12,7 +12,7 @@ Role:
             - 'sts:AssumeRole'
     Path: '/service-role/'
     Description: Execution role for step function to process answer uploads
-    RoleName: ${self:service}-AnswerUploadExecRole-${self:provider.stage}
+    RoleName: AnswerUploadExecRole-${self:provider.stage}
     Policies:
       - PolicyName: AnswerUploadStepFunctionExecRole
         PolicyDocument:
@@ -28,4 +28,4 @@ Role:
               Action: 'lambda:InvokeFunction'
               Resource:
                 - 'arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:service}-${self:provider.stage}-step_trim'
-
+                - 'arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:service}-${self:provider.stage}-step_transcribe_start'
