--- a/serverless.yml
+++ b/serverless.yml
@@ -368,30 +368,28 @@ functions:
         # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
         - { Ref: BinariesLambdaLayer }
 
+  step_transcribe_collect:
+    handler: step-transcribe-collect.handler
+    memorySize: 512
+    timeout: 30
+    events:
+      # only one suffix is allowed and we have .json and .vtt
+      - s3:
+          bucket: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
+          event: s3:ObjectCreated:*
+          existing: true # otherwise sls will try to create it twice and fail
+          rules:
+            - suffix: '.json'
+      - s3:
+          bucket: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
+          event: s3:ObjectCreated:*
+          existing: true # otherwise sls will try to create it twice and fail
+          rules:
+            - suffix: '.vtt'
+
   step_mark_failed:
       handler: step-mark-failed.handler
       timeout: 30
-
-  # answer-transcribe-collect:
-  #   handler: answer-transcribe-collect.handler
-  #   memorySize: 512
-  #   timeout: 30
-  #   events:
-  #     # only one suffix is allowed and we have .json and .vtt
-  #     - s3:
-  #         bucket: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
-  #         event: s3:ObjectCreated:*
-  #         existing: true # otherwise sls will try to create it twice and fail
-  #         rules:
-  #           - suffix: '.json'
-  #     - s3:
-  #         bucket: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
-  #         event: s3:ObjectCreated:*
-  #         existing: true # otherwise sls will try to create it twice and fail
-  #         rules:
-  #           - suffix: '.vtt'
-
-
 
 resources:
   Conditions:
